/* This Source Code Form is subject to the terms of the Mozilla Public
 * License, v. 2.0. If a copy of the MPL was not distributed with this
 * file, You can obtain one at https://mozilla.org/MPL/2.0/. */

syntax = "proto3";

package featureform.embedding.proto;

message SpaceMetaValue {
  string path = 1;
  string name = 2;
}

message VersionMetaValue {
  string path = 1;
  string space = 2;
  string name = 3;
  uint32 dims = 4;
}
